# ifc2mc

./: .gitignore  AGENTS.md  README.md  main.py  plan.md  pyproject.toml
ifc2mc/: __init__.py  cli.py  config.py  importer.py
tests/: test_cli.py  test_importer_core.py
