[project]
name = "ifc2mc"
version = "0.1.0"
description = "IFC to Minecraft importer"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "amulet-core>=1.9.35",
    "ifcopenshell>=0.8.4.post1",
    "trimesh>=4.11.1",
]

[project.scripts]
ifc2mc = "ifc2mc.cli:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
